--- a/style.css
+++ b/style.css
@@ -31,5 +31,96 @@ font-weight: 400;
 }
 body {
   /* margin: 0; */
- 
+}
+img {
+  max-width: 100%;
+}
+header {
+  background: #2e323f;
+  text-align: center;
+  padding: 1em 0;
+}
+
+.nav-toggle {
+  cursor: pointer;
+  border: 0;
+  width: 3em;
+  height: 3em;
+  padding: 0em;
+  border-radius: 50%;
+  background: #072a2d;
+  color: white;
+  transform: opacity 250ms ease;
+  position: absolute;
+  left: 0;
+}
+.nav-toggle:hover,
+.nav-toggle:focus {
+  opacity: 0.75;
+}
+.hamburger {
+  width: 50%;
+  position: relative;
+}
+.hamburger,
+.hamburger::before,
+.hamburger::after {
+  display: block;
+  background: white;
+  height: 3px;
+  margin: 0 auto;
+}
+.hamburger::before,
+.hamburger::after {
+  content: "";
+  width: 100%;
+}
+.hamburger::before {
+  transform: translateY(-6px);
+}
+.hamburger::after {
+  transform: translateY(3px);
+}
+
+.nav {
+  width: 100%;
+  visibility: hidden;
+  height: 0;
+  position: absolute;
+  font-family: "Oswald", sans-serif;
+  font-weight: 700;
+  font-size: 1.125rem;
+}
+.nav--visible {
+  visibility: visible;
+  height: auto;
+  position: relative;
+}
+.nav__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.nav__item {
+  margin-top: 0.75em;
+}
+.nav__item:hover,
+.nav__item:focus {
+  opacity: 0.75;
+}
+.nav__link {
+  color: #ffffff;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+.nav__list--primary {
+  margin-bottom: 2em;
+}
+.nav__link--button {
+  background: #a59678;
+  padding: 0.25em 0.75em;
+  border-radius: 100px;
+}
+.logo {
+  height: 30px;
 }
