--- a/style.css
+++ b/style.css
@@ -178,6 +178,10 @@ header {
   padding: 0.5em 2em;
   border-radius: 100px;
 }
+.btn:hover,
+.btn:focus {
+  opacity: 0.75;
+}
 .whitesmoke-row {
   background: #f5f5f5;
   text-align: center;
@@ -307,7 +311,6 @@ img {
     margin-top: 2rem;
   }
   .sidebar {
-    
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -321,7 +324,6 @@ img {
     margin-left: 2rem;
   }
   .right-column {
-    
   }
 
   .footer-wrapper {
