--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ header {
 .whitesmoke-row {
   background: #f5f5f5;
   text-align: center;
-  padding: 3em 0;
+  padding: 5em 0;
   line-height: 1.5;
 }
 .col + .col {
@@ -375,6 +375,13 @@ img {
 
     border: 2px solid yellow;
   }
+  .whitesmoke-row--wrapper {
+    gap: 7rem;
+  }
+  .col + .col {
+    margin-top: 0;
+  }
+
   .footer-wrapper {
     flex-direction: column;
   }
