--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ header {
 .whitesmoke-row {
   background: #f5f5f5;
   text-align: center;
-  padding: 5em 0;
+  padding: 5em 0; /* */
   line-height: 1.5;
 }
 .col + .col {
@@ -381,7 +381,22 @@ img {
   .col + .col {
     margin-top: 0;
   }
-
+  main {
+    padding: 5em 0;
+  }
+  .image-section {
+    width: 80%;
+    /* margin-right: 10rem; */
+  }
+  .sketches-image {
+    margin-top: 2rem;
+  }
+  .sidebar {
+    width: 40%;
+    border: 2px solid blue;
+    /* padding-left: 5rem; */
+    margin-left: 7rem;
+  }
   .footer-wrapper {
     flex-direction: column;
   }
