--- a/style.css
+++ b/style.css
@@ -39,7 +39,8 @@ img {
   max-width: 100%;
 }
 .container {
-  width: 85%;
+  /* width: 85%; */
+  width: 90%;
   margin: 0 auto;
   max-width: 1200px;
   position: relative;
